# multi-agent-system

./: .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml
.github/workflows/: release.yml  tag.yml
src/multi_agent_system/: agents.py  providers.py
src/multi_agent_system/systems/visa_application/: app.py  setup.py
